--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 Options +FollowSymLinks
 RewriteEngine on
-RewiteCond %{HTTPS} off
-RewriteFule ^(.*)$ https://e-yuuki.org/$1 [R=301,L]
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://e-yuuki.org/$1 [R=301,L]
