--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 Options +FollowSymLinks
 RewriteEngine on
 RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://e-yuuki.org/$1 [R=301,L]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
