--- a/.textlintrc
+++ b/.textlintrc
@@ -56,15 +56,7 @@
                 ["(\\w+[^.?!]\\)? )internet", "$internet"]
             ]
         },
-        "preset-jtf-style": {
-            "1.2.1.句点(。)と読点(、)": false,
-            "3.1.1.全角文字と半角文字の間": false,
-            "3.1.2.全角文字どうし": false,
-            "3.3.かっこ類と隣接する文字の間のスペースの有無": false,
-            "4.1.3.ピリオド(.)、カンマ(,)": false,
-            "4.2.6.ハイフン(-)": false,
-            "4.3.2.大かっこ［］": false
-        }
+        "preset-jtf-style": "true"
     },
     "filters": {
         "whitelist": "true"
