--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
       - name: HTML5 Validator to NetBSD Writing
         uses: Cyb3r-Jak3/html5validator-action@v0.1
         with:
-          Root: netbsd/
+          Root: 'netbsd'
