--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,6 @@ jobs:
       - name: Link Checker
         uses: peter-evans/link-checker@v1
         with:
-          args: -v -d . -r ./
+          args: -v -d . -r $PWD/
+      - name: debug
+        run: pwd && ls
