--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
       - name: Link Checker
         uses: peter-evans/link-checker@v1
         with:
           args: -v -d . -r .
-      - name: debug
-        run: pwd && ls
