lint html5 testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Link Checker
-        uses: peter-evans/link-checker@v1
+      - name: Validate HTML5
+        uses: Cyb3r-Jak3/html5validator-action@v0.1
         with:
-          args: -v -d . -r .
+          root: .
