Update deploy actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -14,3 +14,14 @@ jobs:
         uses: Cyb3r-Jak3/html5validator-action@v0.1
         with:
           root: .
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v1
+        with:
+          private-key: ${{ secrets.SSH_KEY }}
+          public-key: ${{ secrets.SSH_KEY_PUBLIC }}
+          known-hosts: ${{ secrets.KNOWN_HOSTS }}
+          config: ${{ secrets.SSH_CONFIG  }}
+      - name: Install packages
+        run: apt install openssh-client
+      - name: Deploy to Server
+        run: ssh e-yuuki.org "cd www && git pull"
